tests/unit/default/syntax-error/045-create-table-parens-name-colon-type-params-null-eq-unknown.e.t
---- IN ----
+%table(id:decimal(10,2)?=truely
---- OUT ----
---- ERR ----
syntax: expected <value> after `...al(10,2)?=` near `truely` at position 26 - at line 1
---- EXIT ----
1
